# advent-of-code

./: .gitignore  README.md
2020/day10/: day10.py
2020/day11/: day11.py  day11_p1.py
2020/day12/: day12.py  day12_p1.py
2020/day13/: day13_p1.py
2020/day6/: day6.py
2020/day7/: day7.py
2020/day8/: day8.py
2020/day9/: day9.py
2021/day02/: main.hs
2021/day03/: main.hs
2021/day05/rust/: Cargo.toml
2022/day01/: main.exs
2022/day02/: main.exs
2022/day03/: main.exs
2022/day04/: main.exs
2022/elixir/: README.md  mix.exs
2023/c-sharp/: .editorconfig  Aoc2023.csproj  Program.cs  c-sharp.sln
2023/c-sharp/Days/: ISolver.cs
2024/rust/: .gitignore  Cargo.toml  Justfile
2024/rust/src/: cli.rs  main.rs
2024/rust/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day09.rs  day10.rs  day14.rs  day16.rs  day18.rs  day19.rs  day20.rs  day22.rs  day23.rs  day25.rs  mod.rs  template.rs
_old/2020/day04/: day4.py
_old/2020/day07/: day7.py
_old/2020/day09/: day9.py
_old/2020/day11/: day11_p2.py
_old/2020/day12/: day12_p2.py
_old/2021/day01/: main.hs
_old/2023/c-sharp/: .editorconfig  Program.cs  (+2 more)
day1/: day1.hs  day1.py
day2/: day2.py
day3/: day3.py
day4/: day4.py
day5/: day5.py
rust/: .gitignore  Cargo.toml  Justfile
rust/src/: cli.rs  interface.rs  main.rs  utils.rs
rust/src/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  mod.rs
rust/src/year2024/: day05.rs  day06.rs  day08.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day17.rs  day20.rs  day21.rs  day24.rs  day25.rs  mod.rs
(+63 files in other folders)
