[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
cached = "0.54.0"
clap = { version = "4.5.23", features = ["derive"] }
good_lp = { version = "1.10.0", features = ["microlp"], default-features = false }
num-bigint = "0.4.6"
pathfinding = "4.12.0"
rayon = "1.10.0"
regex = "1.11.1"
